# private-everything-agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SOUL.md  design.md  dev.sh  pyproject.toml  start.sh
.github/workflows/: ci.yml
backend/: config.py  database.py  main.py  scheduler.py
backend/agent/: confirmer.py  context.py  loop.py  memory.py  project_probe.py  skills.py  text_utils.py
backend/api/: connection_manager.py  deps.py  routes.py  terminal.py  websocket.py
backend/api/routers/: mcp.py  memory.py  models.py  providers.py  sessions.py  skills.py  tasks.py  templates.py  tools.py
backend/cli/: __init__.py
backend/migrations/: 001_add_files_column.py  002_add_session_date.py  003_add_working_dir.py
backend/providers/: base.py  key_manager.py  litellm_provider.py
backend/session/: manager.py
backend/tools/: base.py  coding.py  context.py  file_parser.py  filesystem.py  mcp_client.py  plan_mode.py  registry.py  shell.py  subagent.py  task_tools.py  todo.py  web.py
backend/tui/: __init__.py  backend_probe.py  client.py  imaging.py  theme.tcss
backend/tui/screens/: file_picker.py  file_preview.py  help.py  main.py  palette.py  rename.py  settings.py  skill_detail.py  subagent_detail.py  tool_confirm.py  working_dir.py
backend/tui/widgets/: attachment_strip.py  chat_view.py  files_pane.py  input_area.py  mcp_pane.py  scheduler_pane.py  session_list.py  skills_pane.py  slash_popup.py  status_bar.py  subagent_block.py  todos_pane.py  tool_confirm_card.py  trusts_pane.py
backend/utils/: errors.py  llm_logger.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: http.ts  websocket.ts
frontend/src/components/: AttachmentStrip.vue  ChatHeader.vue  ChatPanel.vue  CodeBlock.vue  (+19 more)
skills/code-review/: SKILL.md
skills/data-analysis/: SKILL.md
skills/docker/: SKILL.md
skills/git/: SKILL.md
skills/python-dev/: SKILL.md
skills/web-research/: SKILL.md
skills/writing-assistant/: SKILL.md
tests/: __init__.py  conftest.py  test_cli.py  test_skills.py  test_smoke.py
(+28 files in other folders)
